XNAT-3067 (Bug - Fixed):Certain Icons seem to be broken in Image Viewer

--- a/src/main/scripts/viewer/xiv/css/viewbox.css
+++ b/src/main/scripts/viewer/xiv/css/viewbox.css
@@ -50,8 +50,8 @@
 
 
 .xiv-ui-viewbox-viewlayoutmenu {
-    height: 22px; 
-    width: 22px;
+    height: 15px; 
+    width: 15px;
     cursor: pointer;
     z-index: 1000002;
 }
